restore font css

--- a/book/index.html
+++ b/book/index.html
@@ -14,7 +14,12 @@
     <script>
     new gweb.analytics.AutoTrack({profile:"UA-75468017-1"});
     </script>
-    <link href="css/main.min.css" rel="stylesheet">
+    <link href="css/opensans.css" rel=
+    "stylesheet">
+    <link href=
+    'css/roboto.css'
+    rel='stylesheet' type='text/css'>
+<link href="css/main.min.css" rel="stylesheet">
     <link href="../images/favicon.ico" rel="shortcut icon">
   </head>
   <body class="book">
